[package]
name = "raindropdick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version = "0.16.0",  features = ["crossterm"] }
crossterm = "0.20"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json","rustls-tls"] }
base64 = "0.13.0"
serde_json = "1.0"
urlencoding = "2.1.0"
unicode-width = "0.1"
