[package]
name = "v2raylinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
once_cell = "1.15.0"
base64 = "0.13.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
