[package]
name = "widgets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { git = "https://github.com/gyscos/cursive" }
# cursive = "0.15"
spider = {path = "../spider"}
futures = "0.3"
base64 = "0.13.0"
serde_json = "1.0"
